appears early cluster kill due to exceeding RAM is functioning correctly

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
     "        assert len(self.input_file_names) > 0, \"Need input files\"\n",
     "\n",
     "        # used by engine\n",
-    "        self.client_dict = {}\n",
+    "        self.cluster_dict = {}\n",
     "        self.load_balanced_view_dict = {}\n",
     "        self.async_results_dict = defaultdict(list) # collects all the async_results\n",
     "        self.file_to_cluster_order_dict = defaultdict(list) # remembers which file is sent to which cluster\n",
@@ -120,9 +120,9 @@
     "        self.logger_ram_usage.info('{}: All clusters uses {} GB of RAM'.format(\n",
     "                datetime.now(), sum(self.cluster_RAM_use_dict.values())))\n",
     "        \n",
-    "    def clear_memory_on_cluster(self, cluster_id):\n",
+    "    def clear_memory_on_cluster(self, cluster_id): # not as effective as imagined\n",
     "        import gc\n",
-    "        self.client_dict[cluster_id][:].apply_async(gc.collect)\n",
+    "        self.cluster_dict[cluster_id][:].apply_async(gc.collect)\n",
     "        \n",
     "    def start_cluster(self, n_cpus, cluster_id):\n",
     "        self.logger_status.info(\"\\tAttempting to start cluster job \"\n",
@@ -134,14 +134,14 @@
     "        while attempt_ctr < 3: # Attempt to connect to client 3 times\n",
     "            time.sleep(10) # hard coded\n",
     "            try:\n",
-    "                client = ipp.Client(profile='{}{}'.format(self.cluster_job_name, cluster_id))\n",
+    "                cluster = ipp.Client(profile='{}{}'.format(self.cluster_job_name, cluster_id))\n",
     "            except ipp.error.TimeoutError:\n",
     "                attempt_ctr += 1\n",
     "            else:\n",
-    "                self.cluster_pid_dict[cluster_id] = client[:].apply_async(os.getpid).get()\n",
+    "                self.cluster_pid_dict[cluster_id] = cluster[:].apply_async(os.getpid).get()\n",
     "                self.logger_status.info('\\t\\tCPU processes ready for action: {}'.format(\n",
     "                    self.cluster_pid_dict[cluster_id]))\n",
-    "                return client\n",
+    "                return cluster\n",
     "            # if there is any other error other than TimeoutError, then the error will be raised\n",
     "            \n",
     "    def start_all_clusters(self):\n",
@@ -149,8 +149,8 @@
     "        self.logger_status.info('Starting Multiple Cluster Engine')\n",
     "        #self.logger_status.info('Attempting to start all clusters')\n",
     "        for cluster_id, n_cpus in enumerate(self.n_cpus_list):\n",
-    "            self.client_dict[cluster_id] = self.start_cluster(n_cpus, cluster_id)\n",
-    "            self.load_balanced_view_dict[cluster_id] = self.client_dict[cluster_id].load_balanced_view()            \n",
+    "            self.cluster_dict[cluster_id] = self.start_cluster(n_cpus, cluster_id)\n",
+    "            self.load_balanced_view_dict[cluster_id] = self.cluster_dict[cluster_id].load_balanced_view()            \n",
     "        self.start_time = datetime.now()\n",
     "        self.logger_status.info('All clusters started at {}'.format(self.start_time))\n",
     "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
@@ -159,9 +159,9 @@
     "        self.logger_status.info('\\tAttempting to kill {}{} with CPU processes: {}'.format(\n",
     "            self.cluster_job_name, cluster_id, self.cluster_pid_dict[cluster_id]))\n",
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
-    "        # client.purge_everything()\n",
-    "        self.client_dict[cluster_id].close()\n",
-    "        self.client_dict.pop(cluster_id)\n",
+    "        # cluster.purge_everything()\n",
+    "        self.cluster_dict[cluster_id].close()\n",
+    "        self.cluster_dict.pop(cluster_id)\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
     "        self.logger_status.info('\\t\\tCluster successfully killed')\n",
     "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
@@ -169,9 +169,9 @@
     "        \n",
     "    def kill_all_clusters(self):\n",
     "        self.end_time = datetime.now()\n",
-    "        n_surviving_clusters = len(self.client_dict)\n",
+    "        n_surviving_clusters = len(self.cluster_dict)\n",
     "        self.logger_status.info('Killing all clusters')\n",
-    "        for cluster_id in sorted(self.client_dict):\n",
+    "        for cluster_id in sorted(self.cluster_dict):\n",
     "            self.kill_cluster(cluster_id)\n",
     "        self.logger_status.info('All clusters have been killed')\n",
     "        self.logger_status.info('Multiple Cluster Engine shut down at {}'.format(self.end_time))\n",
@@ -183,20 +183,17 @@
     "        self.logger_failure.info(('Killing {}{} which was processing file {} '\n",
     "            'due to exceeding RAM limit').format(self.cluster_job_name, \n",
     "             cluster_id, self.file_to_cluster_order_dict[cluster_id][-1]))\n",
-    "        self.client_dict[cluster_id].close()\n",
+    "        self.cluster_dict[cluster_id].close()\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
-    "        self.client_dict.pop(cluster_id)\n",
-    "        self.async_results_dict.pop(jth_cluster)\n",
+    "        self.cluster_dict.pop(cluster_id)\n",
+    "        self.async_results_dict.pop(cluster_id)\n",
     "        \n",
     "    def kill_cluster_if_ram_limit_exceeded(self): # only kills at max 1 cluster per method call\n",
-    "        print('function kill_cluster_if_ram_limit_exceeded called')\n",
-    "        print(self.cluster_RAM_use_dict.values(), self.ram_limit_in_GB)\n",
     "        if sum(self.cluster_RAM_use_dict.values()) > self.ram_limit_in_GB:\n",
     "            cluster_id = sorted(self.cluster_RAM_use_dict, \n",
     "                                 key=self.cluster_RAM_use_dict.get, reverse=True)[0]\n",
     "            self.early_kill_cluster(cluster_id)\n",
-    "            print('killing cluster{}'.format(cluster_id))\n",
     "            self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
     "        assert len(self.load_balanced_view_dict) != 0, 'All clusters have been killed prematurely'\n",
     "        \n",
@@ -220,7 +217,7 @@
     "            if exception:\n",
     "                self.logger_failure.info('{}th cluster has error {} on file {}'.format(\n",
     "                    jth_cluster, exception.args[0], self.file_to_cluster_order_dict[jth_cluster][-1]))\n",
-    "            self.async_results_dict.pop(jth_cluster)\n",
+    "                self.async_results_dict.pop(jth_cluster)\n",
     "                                     \n",
     "    def run_clusters(self):\n",
     "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
@@ -250,7 +247,7 @@
     "                    kwargs_dict_list = self.create_kwargs_dict_list(\n",
     "                        self.input_file_names[index],\n",
     "                        jth_cluster, \n",
-    "                        len(self.client_dict[jth_cluster].ids))                    \n",
+    "                        len(self.cluster_dict[jth_cluster].ids))                    \n",
     "                    \n",
     "                    async_result = self.load_balanced_view_dict[jth_cluster].map_async(\n",
     "                        self.function_to_process, kwargs_dict_list)                                              \n",
@@ -267,7 +264,6 @@
     "            time.sleep(1) # hard coded wait time\n",
     "            self.profile_memory_for_all_clusters()\n",
     "            self.kill_cluster_if_ram_limit_exceeded()\n",
-    "            print('ending of while loop body')\n",
     "                \n",
     "        cluster_set = set()\n",
     "        for jth_cluster in self.cluster_indexes:\n",
@@ -275,8 +271,7 @@
     "                break\n",
     "            cluster_set.add(jth_cluster)\n",
     "            self.check_if_function_in_cluster_failed(jth_cluster) # check if last file failed to process\n",
-    "        # async_results_dict; save to disk for later inspection?\n",
-    "        # take a look at whether the results cache takes too much RAM\n",
+    "        # async_results_dict; save to disk for later inspection? determine whether results takes too much RAM\n",
     "        \n",
     "    def main(self):\n",
     "        self.create_cluster_output_dir()\n",
@@ -304,46 +299,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mce.async_results_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# time between profiles\n",
     "# write RAM failure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class MultipleClusterEnginePrototype(object):\n",
-    "    def cluster_release_memory():\n",
-    "        # after each map/reducer step, use gc.collect()\n",
-    "        pass"
    ]
   },
   {
