polished the logging calls

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -45,6 +45,7 @@
     "                 cluster_job_name, \n",
     "                 n_cpus_list, \n",
     "                 ram_limit_in_GB,\n",
+    "                 wait_time_in_seconds,\n",
     "                 input_file_names,\n",
     "                 output_parent_dir,\n",
     "                 function_to_process,\n",
@@ -53,6 +54,7 @@
     "        self.cluster_job_name = cluster_job_name\n",
     "        self.n_cpus_list = n_cpus_list\n",
     "        self.ram_limit_in_GB = ram_limit_in_GB\n",
+    "        self.wait_time_in_seconds = wait_time_in_seconds\n",
     "        self.output_parent_dir = output_parent_dir\n",
     "        self.input_file_names = input_file_names\n",
     "        self.function_to_process = lambda kwargs: function_to_process(**kwargs)\n",
@@ -109,7 +111,8 @@
     "        self.logger_ram_usage.propagate = False\n",
     "        \n",
     "    def profile_memory_for_cluster(self, cluster_id): # RAM in GB\n",
-    "        return sum(psutil.Process(pid).memory_info().rss for pid in self.cluster_pid_dict[cluster_id]) / 1e9\n",
+    "        return sum(psutil.Process(pid).memory_info().rss for \n",
+    "                   pid in self.cluster_pid_dict[cluster_id]) / 1e9\n",
     "        \n",
     "    def profile_memory_for_all_clusters(self):\n",
     "        self.cluster_RAM_use_dict.clear()\n",
@@ -117,7 +120,7 @@
     "            self.cluster_RAM_use_dict[jth_cluster] = self.profile_memory_for_cluster(jth_cluster)           \n",
     "            self.logger_ram_usage.info('{}: {}th cluster uses {} GB of RAM'.format(\n",
     "                datetime.now(), jth_cluster, self.cluster_RAM_use_dict[jth_cluster]))\n",
-    "        self.logger_ram_usage.info('{}: All clusters uses {} GB of RAM'.format(\n",
+    "        self.logger_ram_usage.info('{}: All clusters use {} GB of RAM'.format(\n",
     "                datetime.now(), sum(self.cluster_RAM_use_dict.values())))\n",
     "        \n",
     "    def clear_memory_on_cluster(self, cluster_id): # not as effective as imagined\n",
@@ -125,8 +128,9 @@
     "        self.cluster_dict[cluster_id][:].apply_async(gc.collect)\n",
     "        \n",
     "    def start_cluster(self, n_cpus, cluster_id):\n",
-    "        self.logger_status.info(\"\\tAttempting to start cluster job \"\n",
-    "                \"{}'s {}th cluster with {} CPUs\".format(self.cluster_job_name, cluster_id, n_cpus))\n",
+    "        self.logger_status.info(\"{}: \\tAttempting to start cluster job \"\n",
+    "            \"{}'s {}th cluster with {} CPUs\".format(datetime.now(), \n",
+    "            self.cluster_job_name, cluster_id, n_cpus))\n",
     "        os.system(\"ipcluster start --n={} --profile={}{} --daemonize\".format(\n",
     "            n_cpus, self.cluster_job_name, cluster_id)) # should deprecate to use a safer OS call\n",
     "\n",
@@ -139,50 +143,59 @@
     "                attempt_ctr += 1\n",
     "            else:\n",
     "                self.cluster_pid_dict[cluster_id] = cluster[:].apply_async(os.getpid).get()\n",
-    "                self.logger_status.info('\\t\\tCPU processes ready for action: {}'.format(\n",
-    "                    self.cluster_pid_dict[cluster_id]))\n",
+    "                self.logger_status.info(('{}: \\t\\tCPU processes ready for action'\n",
+    "                    ': {}').format(datetime.now(), self.cluster_pid_dict[cluster_id]))\n",
     "                return cluster\n",
     "            # if there is any other error other than TimeoutError, then the error will be raised\n",
     "            \n",
     "    def start_all_clusters(self):\n",
     "        self.activate_logger()\n",
-    "        self.logger_status.info('Starting Multiple Cluster Engine')\n",
+    "        self.logger_status.info('{}: Starting Multiple Cluster Engine'.format(datetime.now()))\n",
     "        #self.logger_status.info('Attempting to start all clusters')\n",
     "        for cluster_id, n_cpus in enumerate(self.n_cpus_list):\n",
     "            self.cluster_dict[cluster_id] = self.start_cluster(n_cpus, cluster_id)\n",
     "            self.load_balanced_view_dict[cluster_id] = self.cluster_dict[cluster_id].load_balanced_view()            \n",
     "        self.start_time = datetime.now()\n",
-    "        self.logger_status.info('All clusters started at {}'.format(self.start_time))\n",
+    "        self.logger_status.info('{}: All clusters started at {}'.format(datetime.now(), self.start_time))\n",
     "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
     "        \n",
     "    def kill_cluster(self, cluster_id): # use better arguments\n",
-    "        self.logger_status.info('\\tAttempting to kill {}{} with CPU processes: {}'.format(\n",
+    "        self.logger_status.info((\"{}: \\tAttempting to kill cluster job {}'s {}th \"\n",
+    "            \"cluster with CPU processes: {}\").format(datetime.now(), \n",
     "            self.cluster_job_name, cluster_id, self.cluster_pid_dict[cluster_id]))\n",
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
-    "        # cluster.purge_everything()\n",
+    "        # cluster.purge_everything() # sometimes takes forever\n",
     "        self.cluster_dict[cluster_id].close()\n",
     "        self.cluster_dict.pop(cluster_id)\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
-    "        self.logger_status.info('\\t\\tCluster successfully killed')\n",
+    "        self.logger_status.info('{}: \\t\\tCluster successfully killed'.format(datetime.now()))\n",
     "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
     "        time.sleep(5) # hard-coded\n",
     "        \n",
     "    def kill_all_clusters(self):\n",
     "        self.end_time = datetime.now()\n",
     "        n_surviving_clusters = len(self.cluster_dict)\n",
-    "        self.logger_status.info('Killing all clusters')\n",
+    "        self.logger_status.info('{}: Killing all clusters'.format(datetime.now()))\n",
     "        for cluster_id in sorted(self.cluster_dict):\n",
     "            self.kill_cluster(cluster_id)\n",
-    "        self.logger_status.info('All clusters have been killed')\n",
-    "        self.logger_status.info('Multiple Cluster Engine shut down at {}'.format(self.end_time))\n",
-    "        self.logger_status.info('Processed {} files using {} surviving clusters in {} minutes'.format(\n",
-    "            len(self.input_file_names), n_surviving_clusters, (self.end_time - self.start_time).seconds / 60.0))\n",
+    "        self.logger_status.info('{}: All clusters have been killed'.format(datetime.now()))\n",
+    "        self.logger_status.info('{}: Multiple Cluster Engine shut down at {}'.format(\n",
+    "            datetime.now(), self.end_time))\n",
+    "        self.logger_status.info((\"{}: Processed {} files using {} surviving \"\n",
+    "            \"clusters in {} minutes\").format(datetime.now(), len(self.input_file_names), \n",
+    "            n_surviving_clusters, (self.end_time - self.start_time).seconds / 60.0))\n",
     "        logging.shutdown()\n",
     "        \n",
     "    def early_kill_cluster(self, cluster_id):\n",
-    "        self.logger_failure.info(('Killing {}{} which was processing file {} '\n",
-    "            'due to exceeding RAM limit').format(self.cluster_job_name, \n",
-    "             cluster_id, self.file_to_cluster_order_dict[cluster_id][-1]))\n",
+    "        self.logger_failure.info((\"{}: Killing cluster job {}'s {}th cluster which \"\n",
+    "            \"was processing file {} due to exceeding RAM limit\").format(\n",
+    "            datetime.now(), self.cluster_job_name, cluster_id, \n",
+    "            self.file_to_cluster_order_dict[cluster_id][-1]))\n",
+    "        self.logger_ram_usage.info((\"{}: Killing cluster job {}'s {}th cluster due \"\n",
+    "            \"to exceeding RAM limit\").format(datetime.now(), self.cluster_job_name, cluster_id))        \n",
+    "        self.logger_status.info((\"{}: Killing cluster job {}'s {}th cluster with CPU \"\n",
+    "            \"processes: {} due to exceeding RAM limit\").format(datetime.now(), \n",
+    "            self.cluster_job_name, cluster_id, self.cluster_pid_dict[cluster_id]))\n",
     "        self.cluster_dict[cluster_id].close()\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
@@ -215,9 +228,11 @@
     "        else:\n",
     "            exception = self.async_results_dict[jth_cluster][-1].exception()\n",
     "            if exception:\n",
-    "                self.logger_failure.info('{}th cluster has error {} on file {}'.format(\n",
-    "                    jth_cluster, exception.args[0], self.file_to_cluster_order_dict[jth_cluster][-1]))\n",
-    "                self.async_results_dict.pop(jth_cluster)\n",
+    "                self.logger_failure.info((\"{}: {}th cluster has error {} on \"\n",
+    "                    \"file {}\").format(datetime.now(), jth_cluster, exception.args[0], \n",
+    "                    self.file_to_cluster_order_dict[jth_cluster][-1]))\n",
+    "                self.async_results_dict[jth_cluster].pop()\n",
+    "                #self.async_results_dict.pop(jth_cluster)\n",
     "                                     \n",
     "    def run_clusters(self):\n",
     "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
@@ -225,9 +240,7 @@
     "        \n",
     "        for ith_file in tqdm(range(len(self.input_file_names))):\n",
     "            while True:\n",
-    "                # for jth_cluster in self.cluster_indexes: # infinite loop\n",
-    "                time.sleep(1) # hard coded delay time; want to do expected log time lag\n",
-    "                ### insert code here to kill cluster if RAM usage too great, \n",
+    "                time.sleep(self.wait_time_in_seconds)\n",
     "                self.profile_memory_for_all_clusters()\n",
     "                self.kill_cluster_if_ram_limit_exceeded()\n",
     "                jth_cluster = next(self.cluster_indexes)\n",
@@ -254,14 +267,14 @@
     "                    self.async_results_dict[jth_cluster].append(async_result)\n",
     "                    self.file_to_cluster_order_dict[jth_cluster].append(self.input_file_names[index])\n",
     "                    # write status to file--it will only have start times, no end times\n",
-    "                    self.logger_status.info((\"{} is the {}th file and is sent to \"\n",
-    "                        \"{}th cluster for processing\").format(\n",
+    "                    self.logger_status.info((\"{}: {} is the {}th file and is sent to \"\n",
+    "                        \"{}th cluster for processing\").format(datetime.now(),\n",
     "                        self.input_file_names[index], ith_file, jth_cluster))\n",
     "                    break # break out of inner loop to determine if other clusters are available\n",
     "\n",
     "        while not all(self.async_results_dict[jth_cluster][-1].done()\n",
     "                      for jth_cluster in self.async_results_dict): # wait for all clusters to finish\n",
-    "            time.sleep(1) # hard coded wait time\n",
+    "            time.sleep(self.wait_time_in_seconds)\n",
     "            self.profile_memory_for_all_clusters()\n",
     "            self.kill_cluster_if_ram_limit_exceeded()\n",
     "                \n",
@@ -300,18 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# time between profiles\n",
-    "# write RAM failure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "# sorted from largest file to smallest, cluster for largest to smallest\n",
     "# if necessary, recreate engine here if cluster shut down\n",
     "# figure out queue vs deque; deque is better\n",
     "# # write a crap load of documentation\n",
@@ -326,7 +328,6 @@
    },
    "outputs": [],
    "source": [
-    "# weakref\n",
     "# unittest with a mapper/reducer? after each map/reducer step, use gc.collect()\n",
     "\n",
     "# MCE works on files. Hence, if you don't have any datafiles, then just create some empty files\n",
@@ -346,158 +347,6 @@
    "outputs": [],
    "source": [
     "https://github.com/donnemartin/data-science-ipython-notebooks/tree/master/mapreduce"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import itertools\n",
-    "\n",
-    "class Temp0(object):\n",
-    "    def __init__(self):\n",
-    "        self.load_balanced_view_dict = {i: 1 for i in range(5)}\n",
-    "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
-    "        self.cluster_indexes_updated = False\n",
-    "        \n",
-    "    def mutate_cluster_indexes(self, i):\n",
-    "        if i == 3:\n",
-    "            self.load_balanced_view_dict = {5: 1, 6: 1, 7: 1}\n",
-    "            self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
-    "        return i\n",
-    "        \n",
-    "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
-    "        \n",
-    "    def generator(self):\n",
-    "        def gen():\n",
-    "            for i in self.cluster_indexes:\n",
-    "                yield i\n",
-    "        gen1 = gen()\n",
-    "        while True:\n",
-    "            if self.cluster_indexes_updated == True:\n",
-    "                gen1 = gen()\n",
-    "                self.cluster_indexes_updated = False\n",
-    "            temp_value = next(gen1)\n",
-    "            if temp_value == 3: # do a mutation\n",
-    "                self.load_balanced_view_dict = {5: 1, 6: 1, 7: 1}\n",
-    "                self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
-    "                self.cluster_indexes_updated = True\n",
-    "            return temp_value\n",
-    "    \n",
-    "    def incrementer(self):\n",
-    "        for i in self.cluster_indexes:\n",
-    "            print(self.mutate_cluster_indexes(i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp0 = Temp0()\n",
-    "#temp0.incrementer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import itertools\n",
-    "\n",
-    "class Temp2(object):\n",
-    "    def __init__(self):\n",
-    "        self.load_balanced_view_dict = {i: 1 for i in range(5)}\n",
-    "        self.cluster_indexes = None\n",
-    "        self.cluster_indexes_updated = False\n",
-    "        \n",
-    "    def mutate_cluster_indexes(self, i):\n",
-    "        if i == 3:\n",
-    "            self.load_balanced_view_dict = {5: 1, 6: 1, 7: 1}\n",
-    "            self.cluster_indexes_updated = True\n",
-    "        return i        \n",
-    "        \n",
-    "    def cluster_indexes_generator(self):\n",
-    "        def gen_in_gen():            \n",
-    "            def gen_in_gen_in_gen():\n",
-    "                for i in itertools.cycle(sorted(self.load_balanced_view_dict)):\n",
-    "                    yield i\n",
-    "            actual_gen = gen_in_gen_in_gen()\n",
-    "            while True:\n",
-    "                if self.cluster_indexes_updated:\n",
-    "                    actual_gen = gen_in_gen_in_gen()\n",
-    "                    self.cluster_indexes_updated = False            \n",
-    "                yield next(actual_gen)            \n",
-    "        return gen_in_gen()\n",
-    "    \n",
-    "    def safe_incrementer(self):\n",
-    "        self.cluster_indexes = self.cluster_indexes_generator()\n",
-    "        for i in self.cluster_indexes:\n",
-    "            self.mutate_cluster_indexes(i)\n",
-    "            print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp2 = Temp2()\n",
-    "#temp2.safe_incrementer()"
    ]
   }
  ],
