made cluster more robust from exceeding memory limit

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "11111111111111111111111111111111111111111111111111111111111111111111111111111111 # 80 characters"
@@ -11,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +80,7 @@
     "        self.cluster_output_dir = None\n",
     "        self.cluster_RAM_use_dict = {}\n",
     "        self.cluster_pid_dict = {}\n",
+    "        self.n_unsuccessful_files = 0\n",
     "\n",
     "    def create_cluster_output_dir(self):\n",
     "        subdirs = [name for name in os.listdir(self.output_parent_dir) if \n",
@@ -175,14 +178,15 @@
     "    def kill_all_clusters(self):\n",
     "        self.end_time = datetime.now()\n",
     "        n_surviving_clusters = len(self.cluster_dict)\n",
-    "        self.logger_status.info('{}: Killing all clusters'.format(datetime.now()))\n",
+    "        self.logger_status.info('{}: Killing all remaining clusters'.format(datetime.now()))\n",
     "        for cluster_id in sorted(self.cluster_dict):\n",
     "            self.kill_cluster(cluster_id)\n",
     "        self.logger_status.info('{}: All clusters have been killed'.format(datetime.now()))\n",
     "        self.logger_status.info('{}: Multiple Cluster Engine shut down at {}'.format(\n",
     "            datetime.now(), self.end_time))\n",
-    "        self.logger_status.info((\"{}: Processed {} files using {} surviving \"\n",
-    "            \"clusters in {} minutes\").format(datetime.now(), len(self.input_file_names), \n",
+    "        self.logger_status.info((\"{}: Appears that {} files were successfully \"\n",
+    "            \"processed using {} surviving clusters in {} minutes\").format(\n",
+    "            datetime.now(), len(self.input_file_names) - self.n_unsuccessful_files, \n",
     "            n_surviving_clusters, (self.end_time - self.start_time).seconds / 60.0))\n",
     "        logging.shutdown()\n",
     "        \n",
@@ -201,6 +205,7 @@
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
     "        self.cluster_dict.pop(cluster_id)\n",
     "        self.async_results_dict.pop(cluster_id)\n",
+    "        self.n_unsuccessful_files += 1\n",
     "        \n",
     "    def kill_cluster_if_ram_limit_exceeded(self): # only kills at max 1 cluster per method call\n",
     "        if sum(self.cluster_RAM_use_dict.values()) > self.ram_limit_in_GB:\n",
@@ -208,19 +213,14 @@
     "                                 key=self.cluster_RAM_use_dict.get, reverse=True)[0]\n",
     "            self.early_kill_cluster(cluster_id)\n",
     "            self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
-    "        assert len(self.load_balanced_view_dict) != 0, 'All clusters have been killed prematurely'\n",
-    "        \n",
-    "    def create_kwargs_dict_list(self, input_file_name, cluster_id, n_cpus):\n",
-    "        function_kwargs_dict = copy.deepcopy(self.function_kwargs_dict)\n",
-    "        function_kwargs_dict.update({'input_file_name': input_file_name,\n",
-    "                                    'cluster_output_dir': self.cluster_output_dir,\n",
-    "                                    'cluster_id': cluster_id,\n",
-    "                                    'n_cpus': n_cpus})\n",
-    "        function_kwargs_dict_list = []\n",
-    "        for cpu_id in range(n_cpus):\n",
-    "            function_kwargs_dict_list.append(copy.deepcopy(function_kwargs_dict))\n",
-    "            function_kwargs_dict_list[cpu_id]['cpu_id'] = cpu_id\n",
-    "        return function_kwargs_dict_list \n",
+    "        if len(self.load_balanced_view_dict) == 0:\n",
+    "            self.logger_failure.info((\"{}: All clusters have been killed prematurely \"\n",
+    "                \"(probably due to exceeding RAM limit), so it would be a good idea\"\n",
+    "                \" to determine which files, if any, successfully processed\"\n",
+    "                 ).format(datetime.now()))\n",
+    "            self.logger_status.info((\"{}: All clusters have been killed prematurely \"\n",
+    "                \"(probably due to exceeding RAM limit)\").format(datetime.now()))\n",
+    "            raise Exception('All clusters have been killed prematurely')\n",
     "    \n",
     "    def check_if_function_in_cluster_failed(self, jth_cluster):\n",
     "        if self.async_results_dict[jth_cluster] == []: # cluster just started, so it\n",
@@ -232,8 +232,20 @@
     "                    \"file {}\").format(datetime.now(), jth_cluster, exception.args[0], \n",
     "                    self.file_to_cluster_order_dict[jth_cluster][-1]))\n",
     "                self.async_results_dict[jth_cluster].pop()\n",
-    "                #self.async_results_dict.pop(jth_cluster)\n",
-    "                                     \n",
+    "                self.n_unsuccessful_files += 1\n",
+    "\n",
+    "    def create_kwargs_dict_list(self, input_file_name, cluster_id, n_cpus):\n",
+    "        function_kwargs_dict = copy.deepcopy(self.function_kwargs_dict)\n",
+    "        function_kwargs_dict.update({'input_file_name': input_file_name,\n",
+    "                                    'cluster_output_dir': self.cluster_output_dir,\n",
+    "                                    'cluster_id': cluster_id,\n",
+    "                                    'n_cpus': n_cpus})\n",
+    "        function_kwargs_dict_list = []\n",
+    "        for cpu_id in range(n_cpus):\n",
+    "            function_kwargs_dict_list.append(copy.deepcopy(function_kwargs_dict))\n",
+    "            function_kwargs_dict_list[cpu_id]['cpu_id'] = cpu_id\n",
+    "        return function_kwargs_dict_list\n",
+    "                \n",
     "    def run_clusters(self):\n",
     "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
     "        big_file_ctr = 0\n",
@@ -296,21 +308,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# sorted from largest file to smallest, cluster for largest to smallest\n",
@@ -352,21 +370,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
