--- a/sanity_check_tests.ipynb
+++ b/sanity_check_tests.ipynb
@@ -22,12 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:10<00:00,  1.01s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
@@ -71,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -128,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -142,6 +145,11 @@
    ],
    "source": [
     "from multiple_cluster_engine import MultipleClusterEngine\n",
+    "\n",
+    "# create some fake files\n",
+    "for i in range(10):\n",
+    "    !echo {i + 10} > {i}.tmp        \n",
+    "\n",
     "\n",
     "def error_func1( # this function takes no real args that are not mandatory\n",
     "    # mandatory args, you can choose not to use them but function has to take them in\n",
@@ -166,9 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -198,9 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -212,6 +216,10 @@
    ],
    "source": [
     "from multiple_cluster_engine import MultipleClusterEngine\n",
+    "\n",
+    "# create some fake files\n",
+    "for i in range(10):\n",
+    "    !echo {i + 10} > {i}.tmp        \n",
     "\n",
     "\n",
     "def error_func2( # this function takes no real args that are not mandatory\n",
@@ -236,10 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -247,7 +253,7 @@
        "defaultdict(list, {0: [], 1: [], 2: []})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,9 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -284,7 +288,11 @@
    "source": [
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
+    "# create some fake files\n",
+    "for i in range(10):\n",
+    "    !echo {i + 10} > {i}.tmp        \n",
     "\n",
+    "    \n",
     "def exceed_memory_limit( # this function takes no real args that are not mandatory\n",
     "    # mandatory args, you can choose not to use them but function has to take them in \n",
     "     input_file_name, cluster_output_dir, cluster_id, n_cpus, cpu_id):\n",
@@ -316,33 +324,143 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {0: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             2: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             4: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>]})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mce3.async_results_dict # when a function fails due to exceeding memory limit, its async_result history is removed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 6/10 [00:03<00:02,  1.97it/s]"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "All clusters have been killed prematurely",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-cc6f7d903208>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mmce4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultipleClusterEngine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mmce_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m \u001b[0mmce4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# I'm expecting an Exception here due to killing all clusters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    274\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_cluster_output_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    275\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 276\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    277\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mrun_clusters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    227\u001b[0m                 \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_time_in_seconds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    228\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprofile_memory_for_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 229\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill_cluster_if_ram_limit_exceeded\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    230\u001b[0m                 \u001b[0mjth_cluster\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_indexes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    231\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mkill_cluster_if_ram_limit_exceeded\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    193\u001b[0m             self.logger_status.info((\"{}: All clusters have been killed prematurely \"\n\u001b[1;32m    194\u001b[0m                 \"(probably due to exceeding RAM limit)\").format(datetime.now()))\n\u001b[0;32m--> 195\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'All clusters have been killed prematurely'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    196\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcheck_if_function_in_cluster_failed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjth_cluster\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: All clusters have been killed prematurely"
+     ]
+    }
+   ],
    "source": [
-    "mce3.async_results_dict # when a function fails due to exceeding memory limit, its async_result history is removed"
+    "from multiple_cluster_engine import MultipleClusterEngine\n",
+    "\n",
+    "# create some fake files\n",
+    "for i in range(10):\n",
+    "    !echo {i + 10} > {i}.tmp        \n",
+    "\n",
+    "\n",
+    "def exceed_memory_limit_all( # this function takes no real args that are not mandatory\n",
+    "    # mandatory args, you can choose not to use them but function has to take them in \n",
+    "     input_file_name, cluster_output_dir, cluster_id, n_cpus, cpu_id):\n",
+    "    import time\n",
+    "    time.sleep(cluster_id * cpu_id)\n",
+    "    exceed_ram_limit = []\n",
+    "    current_value = 0\n",
+    "    while True:\n",
+    "        exceed_ram_limit.append(current_value)\n",
+    "        current_value += 1\n",
+    "    return cluster_id\n",
+    "        \n",
+    "    \n",
+    "mce_args = {\n",
+    "    'cluster_job_name': 'exceed_memory_all_', # no spaces as it will be part of directory name\n",
+    "    'n_cpus_list': [4, 3, 2, 1, 1, 1], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
+    "    'wait_time_in_seconds': 0.5,\n",
+    "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
+    "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
+    "    'function_to_process': exceed_memory_limit_all,\n",
+    "    'function_kwargs_dict': {} # exceed_memory_limit takes no additional arguments    \n",
+    "    }\n",
+    "\n",
+    "mce4 = MultipleClusterEngine(**mce_args)\n",
+    "mce4.main() # I'm expecting an Exception here due to killing all clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mce4.async_results_dict # when a function fails due to exceeding memory limit, its async_result history is removed"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
