successfully runs in both Python 2 and 3!

--- a/sanity_check_tests.ipynb
+++ b/sanity_check_tests.ipynb
@@ -8,7 +8,26 @@
    },
    "outputs": [],
    "source": [
-    "# All code run on AWS m4.2xlarge (8 CPUs and 32 GB of RAM) with Python 3."
+    "# All code run on AWS m4.2xlarge (8 CPUs and 32 GB of RAM) with Python 3.\n",
+    "# Ran on Python 2 successfully. It appears that this code is Python 3 and 2 compliant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘/home/ubuntu/cluster_results’: File exists\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first make the output directory\n",
+    "!mkdir /home/ubuntu/cluster_results"
    ]
   },
   {
@@ -70,8 +89,10 @@
     "    }\n",
     "\n",
     "mce = MultipleClusterEngine(**mce_args)\n",
+    "# mce.create_cluster_output_dir()\n",
     "# mce.start_all_clusters()\n",
     "# mce.run_clusters()\n",
+    "# mce.kill_all_clusters()\n",
     "mce.main()"
    ]
   },
@@ -412,7 +433,7 @@
     "    'cluster_job_name': 'exceed_memory_all_', # no spaces as it will be part of directory name\n",
     "    'n_cpus_list': [4, 3, 2, 1, 1, 1], # 1st cluster is always the largest or equal to the other clusters\n",
     "    'ram_limit_in_GB': 20.0,\n",
-    "    'wait_time_in_seconds': 0.5,\n",
+    "    'wait_time_in_seconds': 1,\n",
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': exceed_memory_limit_all,\n",
